# Posts-Django-DRF

./: manage.py  pyproject.toml
posts/: admin.py  models.py  serializers.py  views.py
posts/migrations/: 0001_initial.py
zap_api/: asgi.py  settings.py  urls.py  wsgi.py
